<resources>
    <string name="app_name">R2D2</string>

    <string name="r2d2_label">R2D2 apresenta…</string>
    <string name="starwars_label">Star Wars: R2D2</string>
    <string name="my_characters">Meus personagens</string>
    <string name="character_list">Meus Personagens</string>
    <string name="character_new">Conhecer personagem (QRCode)</string>
    <string name="list">Listar</string>
    <string name="the_force">May the force be with you…</string>
    <string name="exit_press_back">Para sair pressione voltar.</string>
    <string name="thanks">Obrigado por usar este APP :D</string>
    <string name="enjoy">Aprovite esse final :)</string>
    <string name="byebye">Bye bye…</string>
    <string name="barcode">R2D2: QRCode</string>
    <string name="character">Personagem</string>
    <string name="films">Filmes</string>
    <string name="character_url">URL:</string>
    <string name="character_height">Altura:</string>
    <string name="character_mass">Massa:</string>
    <string name="character_hair">Cabelo:</string>
    <string name="character_skin">Pele:</string>
    <string name="character_eyes">Olhos:</string>
    <string name="character_planet">Planeta:</string>
    <string name="character_created">Criado:</string>
    <string name="character_edited">Editado:</string>
    <string name="bb8">BB8</string>
    <string name="ops">OPS…</string>
    <string name="loading">Carregando…</string>
    <string name="character_gender">Gênero</string>
    <string name="character_birth_year">Ano:</string>
    <string name="saved">Salvo: %s</string>
    <string name="film_title" formatted="false">%s (Epsódio %s)</string>
    <string name="character_not_found">Personagem não encontrado!</string>
    <string name="title_activity_maps">Minha Localização</string>
    <string name="character_location">Meu local</string>
    <string name="my_location">Localização</string>
    <string name="permission_problem">Sem permissão para %s</string>
    <string name="you_were_here" formatted="false">Você estava aqui! (%s)</string>
    <string name="character_captured">Capturado:</string>
</resources>
