<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_wars_006"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/characterView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@android:drawable/alert_light_frame"
            android:contentDescription="@string/character"
            android:src="@drawable/star_wars" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/alert_light_frame"
            android:stretchColumns="1,3">

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_height" />

                <TextView
                    android:id="@+id/height"
                    style="@style/TableColumnValue" />

                <TextView
                    style="@style/TableColumn2Label"
                    android:text="@string/character_mass" />

                <TextView
                    android:id="@+id/mass"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_hair" />

                <TextView
                    android:id="@+id/hair"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_skin" />

                <TextView
                    android:id="@+id/skin"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_eyes" />

                <TextView
                    android:id="@+id/eyes"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_birth_year" />

                <TextView
                    android:id="@+id/birthYear"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_gender" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_planet" />

                <TextView
                    android:id="@+id/planet"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableColumnLabel"
                    android:text="@string/character_captured" />

                <TextView
                    android:id="@+id/captured"
                    android:layout_span="3"
                    style="@style/TableColumnValue" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/url"
                    style="@style/TableColumnValue.Center"
                    android:layout_span="4" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:background="@android:drawable/alert_light_frame"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.app.FragmentTabHost>
</LinearLayout>